Added inserting JST via angular

--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -1,3 +1,14 @@
-<button>Add my template</button>
+<div ng-controller="appController">
 
-<div id = "template"></div>
+  <button class="regular">Add my template</button>
+
+  <div id = "template"></div>
+
+
+  <h1> This is the angular insert of the template via ng-bind-html:</h1>
+  <div ng-bind-html="template"></div>
+
+
+
+
+</div>
