--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="jstExample">
   <head>
     <title>New Sails App</title>
 
@@ -88,10 +88,13 @@
     -->
 
     <!--SCRIPTS-->
+    <script src="/js/dependencies/angular1.2.20.js"></script>
+    <script src="/js/dependencies/angularxsanitize.js"></script>
     <script src="/js/dependencies/jquery.js"></script>
     <script src="/js/dependencies/lodash.js"></script>
     <script src="/js/dependencies/sails.io.js"></script>
     <script src="/js/app.js"></script>
+    <script src="/js/app2.js"></script>
     <!--SCRIPTS END-->
   </body>
 </html>
